# senor_borroso

./: .gitignore  Cargo.toml
.metals/: metals.lock.db
src/: clustering.rs  dualiter.rs  feat.rs  ftzrs.rs  fuzzyindex.rs  fuzzypoint.rs  hasfeatures.rs  lib.rs  main.rs  metrics.rs  stacksort.rs  testing.rs  utils.rs
