[package]
name = "senor_borroso"
version = "0.1.0"
authors = ["J. Logan Dimond"]
edition = "2018"
license = "MPL-2.0"
description = "Fuzzy (approximate) search for NLP tasks in any language"
repository = "https://github.com/Lambda-Logan/senor_borroso"
exclude = ["under_construction.rs", ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unidecode = "0.3.0"
fxhash = "0.2.1"
levenshtein = "1.0.5"
hnsw = "0.8.0"
space = "0.12.0"
rand_pcg = "0.3.1"
